kubernetes/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        # Image will be updated by GitHub Actions
        image: 123456789012.dkr.ecr.us-east-1.amazonaws.com/bookstore-backend:latest 
        ports:
        - containerPort: 3001
        volumeMounts:
        - mountPath: "/app/backend/data" # Path where NeDB stores data
          name: backend-storage
      volumes:
      - name: backend-storage
        persistentVolumeClaim:
          claimName: backend-pv-claim
