kubernetes/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: default
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        # Image will be updated by GitHub Actions
        image: 123456789012.dkr.ecr.us-east-1.amazonaws.com/bookstore-frontend:latest
        ports:
        - containerPort: 3000
